# my_todolist24

./: .dockerignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build_and_push.yaml
core/: models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
deploy/: docker-compose.yaml
goals/: admin.py  models.py  permissions.py  serializers.py  urls.py
goals/migrations/: 0001_initial.py  0002_goalcomment.py  0003_board_goalcategory_board_boardparticipant.py  0004_create_new_objects.py  0005_alter_goalcategory_board.py
goals/views/: boards.py  categories.py  comments.py  goals.py
todolist/: fields.py  models.py  settings.py  urls.py
